--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
-    "recharts": "^3.2.1"
+    "recharts": "^3.2.1",
+    "tailwind-scrollbar": "^4.0.2",
+    "twilio": "^3.84.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
