--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "expense-tracker",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -10,6 +11,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.3",
     "mysql2": "^3.15.1",
     "next": "^15.5.4",
     "next-auth": "^4.24.11",
